# dummy_ap

./: .gitignore  CMakeLists.txt  sdkconfig.ci
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
components/led/: CMakeLists.txt  Kconfig  led.c
components/led/include/: led.h
components/protocol_examples_common/: CMakeLists.txt  Kconfig.projbuild  connect.c  wifi_connect.c
components/protocol_examples_common/include/: example_common_private.h  protocol_examples_common.h
main/: CMakeLists.txt  main.c
